# letter-server

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  auth.py  config.json  database.py  docker-compose.yml  init.sql  models.py  pyproject.toml  routes.py  server.py
.github/workflows/: ci.yml
src/: .env  __init__.py  auth.py  dal.py  database.py  routes.py  server.py  utils.py
tests/: conftest.py  test_auth.py  test_dal.py  test_routes.py  test_utils.py
